loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: Missing closing brace `}' assumed here
var tour=0
^